docs: atualiza README com changelog e instruçoes